--- a/package.json
+++ b/package.json
@@ -14,21 +14,32 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
+    "expo-image-picker": "~10.1.4",
+    "expo-media-library": "~12.0.2",
+    "expo-permissions": "~12.0.1",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "mobx-state-tree": "^5.0.1",
+    "normalizr": "^3.6.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-actions-sheet": "^0.4.9",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^4.0.3",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.2.3",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "http-proxy-middleware": "^2.0.0",
     "prettier": "^2.3.0"
   },
   "private": true
