--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.2.3",
+    "socket.io-client": "^4.1.2",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
