--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-media-library": "~12.0.2",
     "expo-permissions": "~12.0.1",
     "expo-secure-store": "~10.1.0",
+    "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
