--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-secure-store": "~10.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.9",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "mobx-state-tree": "^5.0.1",
@@ -38,7 +39,8 @@
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.2.3",
     "socket.io-client": "^4.1.2",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
